<resources>
    <string name="app_name">TIDE Learning Grid</string>
    <string name="title_activity_attendance_management">Attendance</string>
    <string name="home">Home</string>
    <string name="attendance">Attendance</string>
    <string name="students">Students</string>
    <string name="dashboard">Dashboard</string>
    <string name="version_prefix">Learning Grid </string>
    <string name="title_activity_student">Students</string>
    <string name="student_name">Student Name</string>
    <string name="unknown_teacher">Select Teacher</string>
    <string name="title_student_list">Students</string>
    <string name="title_student_detail">Student Detail</string>
    <string name="id">ID</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="classLabel">Class</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="unknown_id">Unknown ID</string>
    <string name="unknown_first_name">Unknown First Name</string>
    <string name="unknown_surname">Unknown Surname</string>
    <string name="unknow_classLabel">Unknown Class</string>
    <string name="unknown_year">Unknown Year</string>
    <string name="unknown_gender">Unknown Gender</string>
    <string name="change_photo">Change Photo</string>
    <string name="title_activity_teacher_login">TeacherLogin</string>
    <string name="login">Login</string>
    <string name="teacher_image">Teacher Image</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="default_time">10:10 AM</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="french">Français</string>
    <string name="grade1">Grade 1</string>
    <string name="grade2">Grade 2</string>
    <string name="math">Mathématiques</string>
    <string name="select_grade">Select Grade</string>
    <string name="select_gender">Select Gender</string>
    <string name="current_grade">Current Grade</string>
    <string name="holiday">Holiday</string>
    <string name="start_as_teacher">Start as Teacher</string>
    <string name="start_as_student">Start as Student</string>
    <string name="select_school_mode">Select a school and teacher/student mode</string>
    <string name="unsaved_attendance_warning">Would you like to save captured attendance?</string>
    <string name="no_pdf_viewer">No PDF viewer found</string>
    <string name="permission_required">Permission is needed to continue</string>
    <string name="upload_classroom">Upload Classroom</string>
    <string name="need_school_selection">Select a school to start</string>
    <string name="initial_load">Loading</string>
    <string name="reselection">No Teacher found. School re-selection required</string>
    <string name="received_classrooms">Received classrooms: </string>
    <string name="pre_auth">Pre-authenticated</string>
    <string name="no_tab_activity">Activity not yet on Tab: </string>
    <string name="not_class_file">Selected file did not contain the data of a class</string>
    <string name="tab_status">Status</string>
    <string name="internet_status">Internet Connection</string>
    <string name="db_online_status_label">Data Connection</string>
    <string name="is_online">Connected</string>
    <string name="offline">Offline</string>
    <string name="content_version">Content version</string>
    <string name="classroom_export">Export Classroom</string>
    <string name="export_success">Classroom data exported: </string>
    <string name="export_failed">Data export failed: </string>
    <string name="select_export_dest">Select a destination to export</string>
    <string name="no_sdcard">No SD Card found</string>
    <string name="activity_duration_label">Time in seconds</string>
    <string name="activity_max_score_label">Maximum score</string>
    <string name="activity_actual_score_label">Actual score</string>
    <string name="activity_datapoints_label">Data Points</string>
    <string name="assessment_heading">Assessment Records</string>
    <string name="no_assessments">No Assessment Records found</string>
</resources>
