<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".StudentDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/tvStudentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/student_name"
            android:textSize="30sp"
            android:layout_weight="1"
            android:ellipsize="middle"
            android:padding="20dp"
            android:singleLine="true"/>
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/save" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TableLayout
        android:layout_width="500dp"
        android:layout_height="fill_parent">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="20sp"
                android:padding="10dp"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_id"
                android:textSize="20sp"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="20sp"
                android:padding="10dp"
                android:textAlignment="textEnd"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_first_name"
                android:textSize="20sp"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:maxLines="2"
                android:layout_weight="1"
                />

        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:textSize="20sp"
                android:padding="10dp"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tvSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_surname"
                android:textSize="20sp"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:maxLines="2"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classLabel"
                android:textSize="20sp"
                android:padding="10dp"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknow_classLabel"
                android:textSize="20sp"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textSize="20sp"
                android:padding="10dp"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_year"
                android:textSize="20sp"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:layout_weight="1" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="20sp"
                android:padding="10dp"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_gender"
                android:textSize="20sp"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:id="@+id/ivStudentCapturedImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/student"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btchangePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/change_photo"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>