<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".StudentListActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/studentGradeSelectionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classLabel"
                android:textSize="25px"
                android:textColor="#fff"
                android:layout_marginStart="100dp"
                />
            <TextView
                android:id="@+id/selectedClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknow_classLabel"
                android:textColor="#fff"
                android:textSize="25px"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="25px"
                android:textColor="#fff"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:id="@+id/selectedGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_gender"
                android:textColor="#fff"
                android:textSize="25px"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include layout="@layout/student_list" />
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>