<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Launch">

    <ListView
        android:id="@+id/SchoolsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:choiceMode="singleChoice"
        app:layout_constraintBottom_toTopOf="@id/ConnectionStatus"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/GoTeacher"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ConnectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBottom_toTopOf="@id/DataStatus"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SchoolsList" />

    <TextView
        android:id="@+id/DataStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ConnectionStatus" />
    <Button
        android:id="@+id/UploadClassroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_classroom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/SchoolsList"/>

    <Button
        android:id="@+id/GoTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_as_teacher"
        app:layout_constraintBottom_toTopOf="@id/GoStudent"
        app:layout_constraintLeft_toRightOf="@+id/SchoolsList"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/GoStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_as_student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/SchoolsList"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>